tests/snapshots/basic_test__simple_any_rules.snap
---
source: tests/basic_test.rs
expression: policy
---
Policy {
    rules: [
        Rule {
            effect: Allow,
            target: Target {
                principal: Any,
                action: Any,
                resource: Any,
            },
            condition: None,
            reason: ReasonCode(
                1,
            ),
        },
        Rule {
            effect: Allow,
            target: Target {
                principal: Any,
                action: Any,
                resource: Any,
            },
            condition: None,
            reason: ReasonCode(
                1,
            ),
        },
        Rule {
            effect: Allow,
            target: Target {
                principal: Any,
                action: Any,
                resource: Any,
            },
            condition: None,
            reason: ReasonCode(
                2,
            ),
        },
        Rule {
            effect: Allow,
            target: Target {
                principal: Any,
                action: Any,
                resource: Any,
            },
            condition: None,
            reason: ReasonCode(
                2,
            ),
        },
        Rule {
            effect: Deny,
            target: Target {
                principal: Any,
                action: Any,
                resource: Any,
            },
            condition: None,
            reason: ReasonCode(
                3,
            ),
        },
        Rule {
            effect: Deny,
            target: Target {
                principal: Any,
                action: Any,
                resource: Any,
            },
            condition: None,
            reason: ReasonCode(
                3,
            ),
        },
    ],
    config: PolicyConfig {
        max_rules: 1000,
        max_condition_depth: 10,
        max_context_attrs: 64,
        max_matcher_options: 64,
        max_string_len: 256,
    },
}
